--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -21,3 +21,7 @@
 #docs/*.md
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
+
+openapi-generator.json
+git_push.sh
+replace.js
