--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -22,6 +22,8 @@
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
 
+.gitignore
 openapi-generator.json
 git_push.sh
 replace.js
+package.json
