--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,18 @@
 {
-    "compilerOptions": {
-        "allowJs": true,
-        "allowSyntheticDefaultImports": true,
-        "declaration": true,
-        "esModuleInterop": true,
-        "inlineSourceMap": false,
-        "lib": ["es2017", "dom"],
-        "types": ["node"],
-        "listEmittedFiles": false,
-        "listFiles": false,
-        "moduleResolution": "node",
-        "noFallthroughCasesInSwitch": true,
-        "pretty": true,
-        "resolveJsonModule": true,
-        "skipLibCheck": true,
-        "strict": true,
-        "traceResolution": false,
-        "module": "commonjs",
-        "outDir": "dist",
-        "target": "es2017"
-    },
-    "compileOnSave": false,
-    "exclude": ["node_modules", "dist"]
+  "compilerOptions": {
+    "declaration": true,
+    "target": "ES6",
+    "module": "commonjs",
+    "noImplicitAny": true,
+    "outDir": "dist",
+    "rootDir": ".",
+    "moduleResolution": "node",
+    "typeRoots": [
+      "node_modules/@types"
+    ]
+  },
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
