--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,15 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "*"
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node: [16]
+    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
     name: Node ${{ matrix.node }} sample
     steps:
       - uses: actions/checkout@v3
