--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Fetch API
         run: npm run fetch
       - name: Check cache
+        id: cache
         uses: actions/cache@v2
         with:
           path: firefly-iii-spec.yaml
