--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
     name: Node ${{ matrix.node }} - Build
     outputs:
       version: ${{ steps.bump.outputs.newTag }}
+      hit-cache: ${{ steps.cache.outputs.cache-hit }}
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node }}
@@ -61,6 +62,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     name: Publish to NPM
+    if: needs.build.outputs.hit-cache != true
     steps:
       - uses: actions/checkout@v3
         with:
@@ -86,6 +88,8 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
+    name: Release to GitHub
+    if: needs.build.outputs.hit-cache != true
     steps:
       - name: Download built files
         uses: actions/download-artifact@v3
